--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,4 @@
-
+<html>
 <h1>Celebrate Love Around The World!</h1>
 <img src="vday.jpg">
 <h2>The History of Valentine's Day</h2>
@@ -26,3 +26,4 @@
   <li>Enjoy a walk on the beach</li>
   <li>Drop off the kids and take a nap</li>
 </ul>  
+</html>
