--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <style>
+h1 {text-align: center;}    
+    </style>
 <h1>Celebrate Love Around The World!</h1>
 <img src="vday.jpg">
 <h2>The History of Valentine's Day</h2>
